fix to scrollbar being slightly hidden

--- a/public/css/room.css
+++ b/public/css/room.css
@@ -8,7 +8,6 @@
     height: 100%;
 	box-sizing:border-box;
 	min-height:100%;
-	padding-left:3px;
 	padding-top:3px;
 	display:table;
 
